<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".activity.LoginActivity"
                                                   android:background="@drawable/bg"
                                                   tools:layout_editor_absoluteY="81dp">


    <TextView
            android:gravity="center"
            android:id="@+id/loginpassword"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="7dp"
            android:text="@string/username"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginusername"
            app:layout_constraintEnd_toStartOf="@+id/loginusername"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="67dp"
            android:layout_marginRight="7dp"/>

    <TextView
            android:gravity="center"
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@+id/passwordText"
            app:layout_constraintEnd_toStartOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordText" android:layout_marginRight="7dp"
            android:layout_marginLeft="67dp"/>

    <EditText
            android:id="@+id/loginusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="41dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginpassword"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginRight="41dp" android:autofillHints=""/>

    <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="41dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/loginusername" android:layout_marginRight="41dp"
            android:autofillHints=""/>

    <Button
            android:id="@+id/loginlogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="53dp"
            android:text="@string/login"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginback" android:layout_marginRight="53dp"/>

    <Button
            android:id="@+id/loginback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="26dp"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@+id/loginlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" android:layout_marginRight="26dp"
            android:layout_marginLeft="55dp"/>

    <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happiness_in_busyness"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginusername"
            app:layout_constraintStart_toStartOf="@+id/loginpassword"
            android:layout_marginStart="39dp" android:layout_marginLeft="39dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>